--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,15 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   shared_preferences: ^2.3.2
   intl: ^0.19.0
+  bot_toast: ^4.1.3
+  flutter_easyloading: ^3.0.5
+  connectivity_plus: ^6.0.4
   easy_localization: ^3.0.7
   flutter_native_splash: ^2.4.1
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.10+1
+  either_dart: ^1.0.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +67,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
   json_serializable: ^6.8.0
+  build_runner: ^2.4.12
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
