--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
   sdk: ^3.5.1
@@ -48,13 +48,16 @@ dependencies:
   intl: ^0.19.0
   bot_toast: ^4.1.3
   flutter_easyloading: ^3.0.5
-  connectivity_plus: ^6.0.4
+  connectivity_plus: ^6.0.5
   easy_localization: ^3.0.7
   flutter_native_splash: ^2.4.1
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.0.10+1
   either_dart: ^1.0.0
   http: ^1.2.2
+  firebase_core: ^3.5.0
+  flutter_secure_storage: ^4.2.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
